--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>thi is new div</h1>
+    <div class="body">
+        <div class="header">
+            <a href="">home</a>
+            <a href="">about</a>
+            <a href="">contact</a>
+
+        </div>
+
+        <div class="main">
+
+            <div class="first">
+                <h1>Here You can add photo</h1>
+            </div>
+
+            <div class="first">
+                <h1 class="head">Here you can add content</h1>
+            </div>
+
+        </div>
+
+        <div class="foot">
+            <h1>here is footer</h1>
+        </div>
 </body>
 </html>
